# boostgeometryvector

./: .gitignore  .gitmodules  CMakeLists.txt  DefaultBuildFlags.cmake  INSTALL.txt  README.txt  version.cmake
include/BoostGeometryVector/: BoostGeometryVector.hpp
include/BoostGeometryVector/algorithms/: assign.hpp  comparable_length.hpp  convert.hpp  disjoint.hpp  equals.hpp  length.hpp  transform.hpp
include/BoostGeometryVector/algorithms/detail/: assign_values.hpp  convert_vector_to_vector.hpp  disjoint.hpp
include/BoostGeometryVector/arithmetic/: cross_product.hpp
include/BoostGeometryVector/core/: access.hpp  closure.hpp  geometry_id.hpp  point_order.hpp  tags.hpp
include/BoostGeometryVector/geometries/: geometries.hpp  vector.hpp
include/BoostGeometryVector/geometries/concepts/: check.hpp  vector_concept.hpp
include/BoostGeometryVector/geometries/register/: vector.hpp
include/BoostGeometryVector/strategies/: length.hpp  strategies.hpp  tags.hpp
include/BoostGeometryVector/strategies/cartesian/: length_pythagoras.hpp
share/cmake/: BoostGeometryVectorConfig.cmake.in  CMakeLists.txt
share/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in.cmake
src/example/: CMakeLists.txt  example.cpp
src/test/: Assign.cpp  CMakeLists.txt  Convert.cpp  Products.cpp  disjoint.cpp  make.cpp
tests/: CMakeLists.txt
tests/src/: Assign.cpp  GeometryConstructors.cpp  Length.cpp  Predicates.cpp  Products.cpp  Transform.cpp  main.cpp
